implemented creation of the user in the register MS
